index: portfolio: Cleanup & add initial amlang

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
               <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Tetrad Game Engine</h4>
-              <p class="text-muted">Systems and Graphics Programming</p>
+              <h4>Amlang</h4>
+              <p class="text-muted">AI, Simulation Systems, System Programming</p>
             </div>
           </div>
           <div class="col-md-6 col-sm-6 portfolio-item">
@@ -229,64 +229,36 @@
               <p class="text-muted">Windows Programming</p>
             </div>
           </div>
-          <!--
-              <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                  <div class="portfolio-hover">
-                    <div class="portfolio-hover-content">
-                      <i class="fa fa-plus fa-3x"></i>
-                    </div>
-                  </div>
-                  <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
-                </a>
-                <div class="portfolio-caption">
-                  <h4>Remote Shell</h4>
-                  <p class="text-muted">Systems and Network Programming</p>
+          <div class="col-md-6 col-sm-6 portfolio-item">
+            <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+              <div class="portfolio-background">
+              </div>
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              -->
-              <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                  <div class="portfolio-hover">
-                    <div class="portfolio-hover-content">
-                      <i class="fa fa-plus fa-3x"></i>
-                    </div>
-                  </div>
-                  <img src="img/portfolio/golden.png" class="img-responsive" alt="">
-                </a>
-                <div class="portfolio-caption">
-                  <h4>CNN using OpenCL on GPUs</h4>
-                  <p class="text-muted">Parallel Programming</p>
+              <img src="img/portfolio/tetrad-preview.png" class="img-responsive" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Tetrad Game Engine</h4>
+              <p class="text-muted">Systems and Graphics Programming</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-6 portfolio-item">
+            <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                  <div class="portfolio-hover">
-                    <div class="portfolio-hover-content">
-                      <i class="fa fa-plus fa-3x"></i>
-                    </div>
-                  </div>
-                  <img src="img/portfolio/escape.png" class="img-responsive" alt="">
-                </a>
-                <div class="portfolio-caption">
-                  <h4>Reliable Data-Transfer Protocol</h4>
-                  <p class="text-muted">Network Programming</p>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                  <div class="portfolio-hover">
-                    <div class="portfolio-hover-content">
-                      <i class="fa fa-plus fa-3x"></i>
-                    </div>
-                  </div>
-                  <img src="img/portfolio/borderlands.png" class="img-responsive" alt="">
-                </a>
-                <div class="portfolio-caption">
-                  <h4>Borderlands Mods</h4>
-                  <p class="text-muted">Game and Level Design</p>
-                </div>
-              </div>
+              <img src="img/portfolio/borderlands-preview.png" class="img-responsive" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>Borderlands Mods</h4>
+              <p class="text-muted">Game and Level Design</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -333,7 +305,7 @@
             </span>
             <h4 class="service-heading">Email</h4>
             <p class="text-muted">
-              I am always on the lookout for new and interesting opportunities. Feel free to contact me at alex.khouderchah@gmail.com!</p>
+              I am always on the lookout for new and interesting opportunities. Feel free to contact me at alex.khouderchah@gmail.com.</p>
           </div>
         </div>
       </div>
@@ -380,9 +352,9 @@
               <div class="col-lg-8 col-lg-offset-2">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2>Tetrad Game Engine</h2>
-                  <p class="item-intro text-muted">3D game engine using an entity-component-system architecture</p>
-                  <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+                  <h2>Amlang</h2>
+                  <p class="item-intro text-muted">Intersection of programming language, database, and simulation system.</p>
+                  <!--<img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">-->
                   <!--
                       <ul class="list-inline">
                         <li>Date: July 2014</li>
@@ -390,24 +362,23 @@
                         <li>Category: Graphic Design</li>
                       </ul>
                       -->
-                  <p>The Tetrad game engine is a work-in-progress 3D game engine built using the entity-component-system architecture. It uses OpenGL for rendering, and strives to remain platform-independent. Some notable features built from scratch are:</p>
+                  <p>This series describes the project:</p>
                   <div class="row modal-list">
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                     </div>
                     <div class="col-sm-6">
                       <ul>
-                        <li>Entity-Component-System framework</li>
-                        <li>3D Rendering system using OpenGL</li>
-                        <li>GUI system (using the rendering system)</li>
+                        <li><a href="articles/ai/amlang_0.html">Part 0: Background</a></li>
+                        <li><a href="articles/ai/amlang_1.html">Part 1: Environment</a></li>
                       </ul>
+                      <br>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-2">
                     </div>
                   </div>
 
-                  <p>The project is being developed and tested on Windows and Linux, but does not use any libraries that would exclude the possibility of MacOS support in the future.</p>
                   <ul class="list-inline social-buttons">
-                    <li><a href="http://www.github.com/Khouderchah-Alex/tetrad-engine"><i class="fa fa-github"></i></a>
+                    <li><a href="http://www.github.com/Khouderchah-Alex/amlang"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -450,7 +421,7 @@
       </div>
     </div>
 
-    <!-- Portfolio Modal 3 -->
+        <!-- Portfolio Modal 3 -->
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -465,11 +436,36 @@
               <div class="col-lg-8 col-lg-offset-2">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2>Remote Shell</h2>
-                  <p class="item-intro text-muted">Simple client and server implementation of remote shell on Linux</p>
-                  <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
-                  <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                  <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
+                  <h2>Tetrad Game Engine</h2>
+                  <p class="item-intro text-muted">3D game engine using an entity-component-system architecture</p>
+                  <img class="img-responsive img-centered" src="img/portfolio/tetrad-preview.png" alt="">
+                  <!--
+                      <ul class="list-inline">
+                        <li>Date: July 2014</li>
+                        <li>Client: Round Icons</li>
+                        <li>Category: Graphic Design</li>
+                      </ul>
+                      -->
+                  <p>The Tetrad game engine is a work-in-progress 3D game engine built using the entity-component-system architecture. It uses OpenGL for rendering, and strives to remain platform-independent. Some notable features built from scratch are:</p>
+                  <div class="row modal-list">
+                    <div class="col-sm-3">
+                    </div>
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>Entity-Component-System framework</li>
+                        <li>3D Rendering system using OpenGL</li>
+                        <li>GUI system (using the rendering system)</li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-3">
+                    </div>
+                  </div>
+
+                  <p>The project is being developed and tested on Windows and Linux, but does not use any libraries that would exclude the possibility of MacOS support in the future.</p>
+                  <ul class="list-inline social-buttons">
+                    <li><a href="http://www.github.com/Khouderchah-Alex/tetrad-engine"><i class="fa fa-github"></i></a>
+                    </li>
+                  </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                 </div>
               </div>
@@ -556,7 +552,7 @@
                   <!-- Project Details Go Here -->
                   <h2>Borderlands Mods</h2>
                   <p class="item-intro text-muted">Mods (levels, missions, and guns) for Borderlands 1</p>
-                  <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
+                  <img class="img-responsive img-centered" src="img/portfolio/borderlands.png" alt="">
                   <ul class="list-inline social-buttons">
                     <li><a href="mods.html"><i class="fa fa-external-link"></i></a>
                     </li>
