index: Update portfolio & intro

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">My relationship with computers has been one of interminable fascination. Both the practical and theoretical aspects of computer science are enjoyable and immensely rewarding, and I believe that a holistic understanding of computers necessitates the study of both aspects.</p>
+                    <p class="text-muted">My relationship with computers has been one of interminable fascination. Both the practical and theoretical aspects of computer science are enjoyable and immensely rewarding, and I believe that a holistic understanding of computers necessitates an understanding of both aspects, as well as an understanding of human interdependence, teamwork, social behavior, geopolitics, and the physics of the universe.</p>
                   </div>
                 </div>
               </li>
@@ -121,7 +121,7 @@
                     <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Linux has been, since I first installed it on my machine&#8213;and after learning what an MBR was and how I had broken it&#8213;a source of unending inspiration (well, <a href="https://en.wikipedia.org/wiki/File:Autoconf-automake-process.svg">not all aspects</a>). The kernel's architecture serves as inspiration for software engineering, and the open-source philosophy itself as inspiration for the licensing of code written by individual developers and companies alike.<br>...besides, where else would you find code <a href="https://lkml.org/lkml/2007/3/9/10">like this</a>?</p>
+                    <p class="text-muted">Linux has been a source of inspiration and an environment of continuous learning and self-leverage. The kernel itself is a technical marvel despite its many flaws, the freedom of user-space liberating and a staging ground to understand the merits of the Free Software movement, and the distributed, open-source means of contribution a revelation of human teamwork rooted in a legitimate shared goal.
                   </div>
                 </div>
               </li>
@@ -131,11 +131,11 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>Rock climber & runner</h4>
+                    <h4>Runner & Rock climber</h4>
                     <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Exercise in some form or another has always been a part of my life. Health benefits aside, exercise serves as a constant reminder that one's limits are imposed by the mind, and that great improvement and achievement demand a willingness to go through pain. It reminds me that sustained comfort is not a sign of success, but of stagnation.</p>
+                    <p class="text-muted">Exercise in some form has always been a part of my life. Health benefits aside, exercise serves as a constant reminder that one's limits are primarily imposed by the mind, and that improvement demands a willingness to go through pain and discomfort. It reminds me that sustained comfort is not a sign of success, but of stagnation. It connects mind and body in a manner that was biologically meant to happen, and makes both stronger.</p>
                   </div>
                 </div>
               </li>
@@ -177,7 +177,7 @@
                     <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted"><br>The future is uncertain, but bright. I am always looking for opportunities to work on compelling projects, meet interesting people, and improve myself.</p>
+                    <p class="text-muted"><br>Technically, my current focus lies primarily with Amlang (see below) and red teaming. However, I am always looking for opportunities broadly to contribute to compelling projects, work with others as a cohesive and mutually-mentoring team, and improve myself.</p>
                   </div>
                 </div>
               </li>
@@ -193,12 +193,12 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading">Portfolio</h2>
-            <h3 class="section-subheading text-muted">Selected personal and school projects</h3>
+            <h3 class="section-subheading text-muted">Selected professional and personal projects</h3>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6 col-sm-6 portfolio-item">
-            <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+            <a href="#portfolioAmlang" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-background">
               </div>
               <div class="portfolio-hover">
@@ -206,15 +206,16 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+              <img src="img/portfolio/amlang.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4>Amlang</h4>
               <p class="text-muted">AI, Simulation Systems, System Programming</p>
             </div>
           </div>
+
           <div class="col-md-6 col-sm-6 portfolio-item">
-            <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+            <a href="#portfolioCros" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-background">
               </div>
               <div class="portfolio-hover">
@@ -222,15 +223,33 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <div class="w3wm-half"></div>
+              <img src="img/portfolio/cros-preview.png" class="img-responsive" alt="">
+            </a>
+            <div class="portfolio-caption">
+              <h4>ChromiumOS Contributions</h4>
+              <p class="text-muted">OS and Network Programming</p>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a href="#portfolioW3wm" class="portfolio-link" data-toggle="modal">
+              <div class="portfolio-background">
+              </div>
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fa fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <div class="w3wm-third"></div>
             </a>
             <div class="portfolio-caption">
               <h4>Tiling Desktop Manager for Windows</h4>
               <p class="text-muted">Windows Programming</p>
             </div>
           </div>
-          <div class="col-md-6 col-sm-6 portfolio-item">
-            <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a href="#portfolioTetrad" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-background">
               </div>
               <div class="portfolio-hover">
@@ -245,8 +264,9 @@
               <p class="text-muted">Systems and Graphics Programming</p>
             </div>
           </div>
-          <div class="col-md-6 col-sm-6 portfolio-item">
-            <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <a href="#portfolioBl" class="portfolio-link" data-toggle="modal">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
@@ -305,7 +325,7 @@
             </span>
             <h4 class="service-heading">Email</h4>
             <p class="text-muted">
-              I am always on the lookout for new and interesting opportunities. Feel free to contact me at alex.khouderchah@gmail.com.</p>
+              I am always on the lookout for new and interesting opportunities, particularly regarding Amlang and red teaming. Feel free to contact me at alex.khouderchah@gmail.com.</p>
           </div>
         </div>
       </div>
@@ -316,7 +336,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Alex Khouderchah 2017</span>
+            <span class="copyright">Copyright &copy; Alex Khouderchah 2022</span>
           </div>
           <div class="col-md-8">
             <!--
@@ -338,7 +358,7 @@
     <!-- Use the modals below to showcase details about your portfolio projects! -->
 
     <!-- Portfolio Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioAmlang" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -354,6 +374,7 @@
                   <!-- Project Details Go Here -->
                   <h2>Amlang</h2>
                   <p class="item-intro text-muted">Intersection of programming language, database, and simulation system.</p>
+                  <img class="img-responsive img-centered" src="img/portfolio/amlang.png" alt="">
                   <!--<img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">-->
                   <!--
                       <ul class="list-inline">
@@ -362,6 +383,7 @@
                         <li>Category: Graphic Design</li>
                       </ul>
                       -->
+                  <p>Amlang is a language system that reverses the bifurcation into programming language and database, permits self-leverage in both Amlang and the underlying Rust, and maintains operational agnosticism.</p>
                   <p>This series describes the project:</p>
                   <div class="row modal-list">
                     <div class="col-sm-4">
@@ -391,7 +413,74 @@
     </div>
 
     <!-- Portfolio Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioCros" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl">
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 col-lg-offset-2">
+                <div class="modal-body">
+                  <h2>ChromiumOS</h2>
+                  <p class="item-intro text-muted">Open-source contributions to ChromeOS</p>
+                  <img class="img-responsive img-centered" src="img/portfolio/cros.png" alt="">
+                  <p>List of public contributions to ChromeOS (ChromiumOS) <a href="https://chromium-review.googlesource.com/q/owner:akhouderchah%2540chromium.org,75"><b>here</b></a>.</p>
+                  <p>Selected commits:</p>
+                  <div class="row modal-list">
+                    <div class="col-sm-2">
+                    </div>
+                    <div class="col-sm-8">
+                      <p style="text-align: left; margin-bottom: 2px"><b>Features</b></p>
+                      <ul>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1590183">shill: connection: Use per-device tables for all connections</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1829659">shill: service: Use Disconnecting state</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1887726">shill: external_task: Allow ExternalTask destruction in death callback</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2008092">shill: device_info: Unify Device destruction for physical technologies</a></li>
+                      </ul>
+
+                      <p style="text-align: left; margin-bottom: 2px"><b>Security Fixes</b></p>
+                      <ul>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2180967">vpn: Sanitize xl2tpd configuration string values</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1495422">libbrillo: http: Use chromeos CA certs rather than NSS store</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/aosp/platform/system/update_engine/+/1553463">update_engine: Only use CAPATH for certificate verification</a></li>
+                      </ul>
+
+                      <p style="text-align: left; margin-bottom: 2px"><b>Documentation</b></p>
+                      <ul>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1797272">shill: Add top-level README</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2070321">shill: doc: Document VPN stack</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1436376">hermes: Add background and design to README.md</a></li>
+                      </ul>
+
+                      <p style="text-align: left; margin-bottom: 2px"><b>Code Quality Improvements</b></p>
+                      <ul>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1698497">shill: Clean up RoutingPolicyEntry interface</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1768862">shill: Add mockable keyword</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2106358">shill: key_value_store: Templatize Contains* methods</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1904249">shill: Centralize recognition of "arcbr0" in DeviceInfo</a></li>
+                      </ul>
+                      <br>
+                    </div>
+                    <div class="col-sm-2">
+                    </div>
+                  </div>
+                  </ul>
+                  <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Portfolio Modal 2 -->
+    <div class="portfolio-modal modal fade" id="portfolioW3wm" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -421,8 +510,8 @@
       </div>
     </div>
 
-        <!-- Portfolio Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- Portfolio Modal 3 -->
+    <div class="portfolio-modal modal fade" id="portfolioTetrad" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -446,7 +535,7 @@
                         <li>Category: Graphic Design</li>
                       </ul>
                       -->
-                  <p>The Tetrad game engine is a work-in-progress 3D game engine built using the entity-component-system architecture. It uses OpenGL for rendering, and strives to remain platform-independent. Some notable features built from scratch are:</p>
+                  <p>The Tetrad game engine is a (now abandoned) 3D game engine built using the entity-component-system architecture. It uses OpenGL for rendering, and strives to remain platform-independent. Some notable features built from scratch are:</p>
                   <div class="row modal-list">
                     <div class="col-sm-3">
                     </div>
@@ -461,7 +550,9 @@
                     </div>
                   </div>
 
-                  <p>The project is being developed and tested on Windows and Linux, but does not use any libraries that would exclude the possibility of MacOS support in the future.</p>
+                  <p>The project was being developed and tested on Windows and Linux.<br>
+                    Nowadays, I would want to use Amlang to develop such a system, with the end result being a mixture of compiled Rust and interpreted Amlang.
+                  </p>
                   <ul class="list-inline social-buttons">
                     <li><a href="http://www.github.com/Khouderchah-Alex/tetrad-engine"><i class="fa fa-github"></i></a>
                     </li>
@@ -476,7 +567,7 @@
     </div>
 
     <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioCNN" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -505,7 +596,7 @@
     </div>
 
     <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioRDP" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -536,7 +627,7 @@
     </div>
 
     <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioBl" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
@@ -551,7 +642,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2>Borderlands Mods</h2>
-                  <p class="item-intro text-muted">Mods (levels, missions, and guns) for Borderlands 1</p>
+                  <p class="item-intro text-muted">Mods&#8213;levels, missions, and guns&#8213;for Borderlands 1 (developed during ages 13-15)</p>
                   <img class="img-responsive img-centered" src="img/portfolio/borderlands.png" alt="">
                   <ul class="list-inline social-buttons">
                     <li><a href="mods.html"><i class="fa fa-external-link"></i></a>
