index: portfolio: Add prelude & target="_blank" to github links

--- a/index.html
+++ b/index.html
@@ -399,8 +399,9 @@
                     </div>
                   </div>
 
+                  <p style="margin-bottom: 10px">View the source code:</p>
                   <ul class="list-inline social-buttons">
-                    <li><a href="http://www.github.com/Khouderchah-Alex/amlang"><i class="fa fa-github"></i></a>
+                    <li><a href="http://www.github.com/Khouderchah-Alex/amlang" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -497,8 +498,9 @@
                   <p class="item-intro text-muted">Tiling desktop manager for Windows</p>
                   <img class="img-responsive img-centered" src="img/portfolio/w3wm_Intro.gif" alt="">
                   <p>w3wm is a project dedicated to providing Windows 7, 8, and 10 with an experience similar to that of using i3 on Linux. Windows are automatically tiled, and users can use the keyboard to navigate between, move, resize, open, and close windows. Built from the ground up with native support for multi-monitor setups and DPI-aware processes, w3wm is a desktop manager fit for the modern user who potentially has multiple monitors of high resolution.</p>
+                  <p style="margin-bottom: 10px">View the source code:</p>
                   <ul class="list-inline social-buttons">
-                    <li><a href="http://www.github.com/Khouderchah-Alex/w3wm"><i class="fa fa-github"></i></a>
+                    <li><a href="http://www.github.com/Khouderchah-Alex/w3wm" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -550,11 +552,12 @@
                     </div>
                   </div>
 
-                  <p>The project was being developed and tested on Windows and Linux.<br>
+                  <p>The project was being developed and tested on Windows and Linux.
                     Nowadays, I would want to use Amlang to develop such a system, with the end result being a mixture of compiled Rust and interpreted Amlang.
                   </p>
+                  <p style="margin-bottom: 10px">View the source code:</p>
                   <ul class="list-inline social-buttons">
-                    <li><a href="http://www.github.com/Khouderchah-Alex/tetrad-engine"><i class="fa fa-github"></i></a>
+                    <li><a href="http://www.github.com/Khouderchah-Alex/tetrad-engine" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -614,7 +617,7 @@
                   <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
                   <p>This is an implementation of a library that provides an interface similar to that of the Berkeley sockets API, with the library itself providing reliable data transfer over UDP. While there are certainly similarities between the implemented protocol and TCP, there are a number of differences (for example, TCP uses cumulative ACKs, whereas the implemented protocol uses ACKs in a manner similar to that of Selective Repeat).</p>
                   <ul class="list-inline social-buttons">
-                    <li><a href="http://www.github.com/Khouderchah-Alex/libRDT"><i class="fa fa-github"></i></a>
+                    <li><a href="http://www.github.com/Khouderchah-Alex/libRDT" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
